grade-istio/authorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: grade
  namespace: backend
spec:
  selector:
    matchLabels:
       app: grade
  rules:
    - to:
        - operation:
            methods: [ "GET", "POST", "PUT", "DELETE" ]
            paths: [ "/grade" ,"/grade/*"]
      from:
        - source:
              requestPrincipals: [ "*" ]
      when:
        - key: request.auth.claims[realm_access][roles]
          values: [ "guest", "host"]
